@@ -32,5 +32,4 @@
 - cumulative effect of a compound action sucks
 - fetch smallest/largest mails first. best pattern? probably 1 small, then in
   decreasing size order, but with longer queue necessary
-- document compound actions in man page
 - document lambda actions in man page
