@@ -1,4 +1,4 @@
-.\" $Id: fdm.conf.5,v 1.63 2007-03-27 10:07:39 nicm Exp $
+.\" $Id: fdm.conf.5,v 1.64 2007-04-05 10:41:48 nicm Exp $
 .\"
 .\" Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -486,6 +486,11 @@ The syntax is:
 .Bl -tag -width Ds
 .It Xo Ic action Ar name Op Ar users
 .Ar action
+.Xc
+.It Xo Ic action Ar name Op Ar users
+.Li {
+.Ar action ...
+.Li }
 .Xc
 .El
 .Pp
