@@ -1,3 +1,8 @@
+04 April 2007
+
+* Set the socket non-blocking in before setting up SSL in connect.c, otherwise
+  SSL_connect might block.
+
 03 April 2007
 
 * Instead of doing complicated things to see if a mmap'd region is okay, just
@@ -240,4 +245,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.64 2007-04-03 19:03:02 nicm Exp $
+$Id: CHANGES,v 1.65 2007-04-05 10:41:47 nicm Exp $
